crates/css_lexer/tests/snapshots/popular_snapshots__popular_reset.snap
---
source: crates/css_lexer/tests/popular_snapshots.rs
expression: tokens
---
[
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 10,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 8,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 10,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 1,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 1,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 1,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 9,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Dimension",
    len: 4,
    unit: r#%,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 14,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 8,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 10,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 11,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 1,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 10,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 10,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 10,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 10,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "String",
    len: 2,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "LeftCurly",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 15,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 8,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 14,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 1,
  ),
  Token(
    kind: "Semicolon",
    len: 1,
  ),
  Token(
    kind: "RightCurly",
    len: 1,
  ),
]
