crates/css_lexer/tests/snapshots/popular_snapshots__water.2.1.1.snap
---
source: crates/css_lexer/tests/popular_snapshots.rs
expression: tokens
---
[
  Token(
    kind: "Ident",
    len: 12,
  ),
  Token(
    kind: "Number",
    len: 2,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 2,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Dimension",
    len: 4,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 8,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Ident",
    len: 11,
  ),
  Token(
    kind: "String",
    len: 36,
  ),
  Token(
    kind: "Ident",
    len: 9,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 8,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "LeftParen",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 8,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "RightParen",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 7,
  ),
  Token(
    kind: "Number",
    len: 3,
  ),
  Token(
    kind: "Number",
    len: 4,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 7,
  ),
  Token(
    kind: "Number",
    len: 4,
  ),
  Token(
    kind: "Number",
    len: 4,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 7,
  ),
  Token(
    kind: "Number",
    len: 4,
  ),
  Token(
    kind: "Number",
    len: 4,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 10,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 8,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "LeftParen",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 8,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "RightParen",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 7,
  ),
  Token(
    kind: "Number",
    len: 3,
  ),
  Token(
    kind: "Number",
    len: 4,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 3,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 9,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Ident",
    len: 7,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Comma",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 8,
  ),
  Token(
    kind: "Ident",
    len: 8,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 3,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 5,
  ),
  Token(
    kind: "LeftParen",
    len: 1,
  ),
  Token(
    kind: "Dimension",
    len: 3,
  ),
  Token(
    kind: "RightParen",
    len: 1,
  ),
  Token(
    kind: "LeftSquare",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 4,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "RightSquare",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 6,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 3,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Delim",
    len: 3,
  ),
  Token(
    kind: "Dimension",
    len: 2,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Dimension",
    len: 4,
  ),
  Token(
    kind: "Dimension",
    len: 5,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Dimension",
    len: 2,
  ),
  Token(
    kind: "Number",
    len: 4,
  ),
  Token(
    kind: "Number",
    len: 3,
  ),
  Token(
    kind: "Number",
    len: 3,
  ),
  Token(
    kind: "Number",
    len: 2,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 2,
  ),
  Token(
    kind: "Colon",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 2,
  ),
  Token(
    kind: "LeftParen",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 4,
  ),
  Token(
    kind: "Ident",
    len: 2,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 1,
  ),
  Token(
    kind: "RightParen",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Delim",
    len: 3,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Ident",
    len: 3,
  ),
  Token(
    kind: "Delim",
    len: 3,
  ),
  Token(
    kind: "Ident",
    len: 5,
  ),
  Token(
    kind: "LeftSquare",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 5,
  ),
  Token(
    kind: "Delim",
    len: 1,
  ),
  Token(
    kind: "Number",
    len: 5,
  ),
  Token(
    kind: "RightSquare",
    len: 1,
  ),
]
